--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@ p{
     color: #606060;
 }
 
+.extra-div h2,.servicediv h2{
+    font-size: 0.9rem;
+    margin: 20px 0 15px 0;
+    line-height: 1.1;
+    word-spacing: 4px;
+}
+
+i{
+    color: #2fccd0;
+}
+/*************************************************************/
+
 .header{
     width: 100%;
     height: 100vh;
@@ -29,7 +41,7 @@ p{
     clip-path: polygon(100% 0%, 100% 75%, 50% 100%, 0 75%, 0 0);
 }
 
-.header:before{
+.header::before{
     content: "";
     position: absolute;
     top: 0%;;
@@ -41,7 +53,7 @@ p{
     background: linear-gradient(to right, #1e5799 0%, #3ccdbb 0%, #16c9f6 100%);
 }
 
-navbar:before{
+navbar::before{
     content: "";
     position: absolute;
     top: 0%;;
@@ -62,8 +74,19 @@ navbar:before{
     height: inherit;
     color: white;
     text-align: center;
-    margin-top: 15%;
+    margin-top: 0;
+    position: relative;
 }
+.center-div{
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+} 
+
+
 
 .header-buttons a{
     border: 1px solid #fff;
@@ -85,16 +108,223 @@ navbar:before{
     box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
 } 
 
+.center-div p{
+    font-size: 1.3rem;
+    padding: 10px 0 20px 0;
+    color: white;
+}
+
+/*************************extra header starts*****************************/
+
+.header-extradiv{
+    width: 100%;
+    height: auto;
+    margin: 100px 0;
+    text-align: center;
+}
+
+.extra-div{
+    background: white;
+    border: medium none;
+    padding: 50px !important;
+    border-radius: 3px;
+    transition: 0.3s;
+}
+
+.extra-div:hover{
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
+    transform: translateY(-20px);
+}
 
 
+/******************************extra header ends***********************/
+
+/* ********************************Offer selection start*************************** */
+.serviceoffers{
+    background: #f7f7f9;
+    padding: 50px 0;
+}
+
+.heading{
+    margin-bottom: 50px;
+}
+
+.heading h1{
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.names h1{
+    color: #2e2e2e;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.service-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progress{
+    height: 0.6rem !important;
+    margin-bottom: 25px !important;
+}
 
 
+/* *********************************Offer selection ends**************************** */
+
+/***********************************Awards Won**********************************/
+.project-work{
+    margin: 100px 0;
+
+}
+.project-work h1{
+    font-size: 2rem;
+    text-align: center;
+}
+
+/***********************************Awards Won**********************************/
 
 
+/***********************************Pricing Start**********************************/
+.pricing{
+    width: 100%;
+    height: 100vh;
+    padding: 50px;
+    position: relative
+}
+.pricing::before{
+    content: "";
+    position: absolute;
+    top: 0%;;
+    bottom: 0%;
+    left: 0;
+    right: 0;
+    
+    z-index: -1;
+    background: linear-gradient(160deg, #16c9f6 55%, #fff 0%);
+}
 
+.money{
+    font-size: 40px;
+    line-height: 1;
+    color: #606060;
+}
 
+.card{
+    transition: 0.4s ease;
+}
+.card-header{
+    font-size: 1.6rem;
+    font-weight: bold;
+    background: #fff !important;
+    padding: 25px !important;
+}
 
+.card-body{
+    padding: 30px 0px !important;
+}
 
+.card-body li{
+    margin:10px 0;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.6;
+    color: #606060;
+}
+
+.card-footer{
+    background: white !important;
+    padding: 30px 0px !important;
+}
+
+.card-footer a{
+    border: 1px solid #50d1c0;
+    margin: 0 5px;
+    border-radius: 100px;
+    padding: 12px 35px;
+    outline: none;
+    color: #50d1c0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: center;
+}
+
+.card:hover .card-footer a{
+    color: #fff;
+    background: #50d1c0;
+    text-decoration: none;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
+} 
+
+.card:hover{
+    transform: translateY(-20px);
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
+}
+
+.card:hover .card-header,.card:hover .money{
+    color: #50d1c0;
+}
+
+.card-second{
+    transform: translateY(-20px);
+}
+/***********************************Pricing Ends**********************************/
+
+/***********************************Customer Feedback**********************************/
+.happyclients {
+    width: 100%;
+    height: 70vh;
+}
+
+.box{
+    text-align: center;
+    border: 1px solid rgba(0,0,0,0.3);
+    border-radius: 2px;
+    transition: 0.3s ease;
+}
+
+.box:hover{
+    background: #16c9f6;
+}
+.box:hover p{
+    color: white;
+}
+
+.carousel-indicators{
+    position: absolute;
+    right: 0;
+    bottom: -60px !important;
+}
+.carousel-indicators .active{
+    background-color: #16c9f6 !important;
+}
+
+.box img{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50% !important;
+    margin-top: 20px;
+}
+
+.box h1{
+    font-size: 13px;
+    font-weight: 700;
+    color:#000;
+    margin-bottom: 10px;
+}
+
+.box h2{
+    font-size: 13px;
+    font-weight: 400px;
+    color: #666666;
+}
+
+/***********************************Customer Feedback Ends**********************************/
 
 
 
