--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,32 @@ navbar::before{
 }
 
 /***********************************Customer Feedback Ends**********************************/
+/***********************************Contact Us**********************************/
+.contactus{
+    width: 100%;
+    height: 100vh;
+    padding:80px;
+    position: relative;
+}
+
+.contactus::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom:0 ;
+    right: 0;
+    background: linear-gradient(330deg,#16c9f6 55%, #fff 0%);
+    z-index: -1;
+
+}
+
+::placeholder{
+    font-size: 0.85rem;
+}
+
+
+/***********************************Customer Us End**********************************/
 
 
 
